Fix formatting of login card on mobile

--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -9,7 +9,7 @@
 
 .login-card {
   height: auto;
-  width: 25em;
+  max-width: 25em;
   padding: 2em;
   margin: auto;
   text-align: center;
